slight style mod to avoid weird line break on medium browser width

--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -315,7 +315,8 @@ footer {
 		}
 	}
 	.icon-title{
-		line-height: 40px;
+		margin-top: 10px;
+		margin-bottom: 10px;
 	}
 	.fa-stack {
 		margin-right: 0;
